# ReservaFlow

./: .gitignore  DEPLOY.md  README.md
FrontendReact/: README.md  package.json
restaurant-reservations/: API_DOCUMENTATION.md  Dockerfile  README.md  WARNINGS.md  create_sample_data.py  db.sqlite3  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  restart.sh  run_realistic_tests.sh  run_tests.py  test_docker.py  test_docker_complete.sh  test_final.py  test_redis_cache.py  test_redis_fix.py
restaurant-reservations/config/: celery.py  middleware.py  monitoring.py  settings.py  settings_local_docker.py  settings_test.py  urls.py
restaurant-reservations/customers/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
restaurant-reservations/customers/migrations/: 0001_initial.py  0002_alter_customer_options_customer_allergies_and_more.py
restaurant-reservations/docs/: DISTRIBUTED_LOCK_PATTERN.md  EMAIL_SETUP.md  README.md  STATICFILES.md  TEST_SUMMARY.md
restaurant-reservations/maintenance/: __init__.py  tasks.py
restaurant-reservations/notifications/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
restaurant-reservations/notifications/migrations/: 0001_initial.py
restaurant-reservations/reservations/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
restaurant-reservations/restaurants/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
restaurant-reservations/tests/: Makefile.test  README.md  conftest.py  pytest.ini  pytest_realistic.ini
(+58 files in other folders)
